--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/home/rreily1978/Downloads/mongo-java-driver-2.12.6-20150115.162025-1.jar"/>
+	<classpathentry kind="lib" path="/home/rreily1978/Downloads/morphia-0.109.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
